Choose a naturally wooded start instead of planting a tree
A start needs at least three reachable logs inside its border. When the first
spot has fewer, wooded biomes within 512 blocks are read off the biome map
nearest first; each candidate's land is counted, and the spawn and border move
to the first whose border really holds three logs. If nothing natural is in
reach the start is left as it was. No tree is ever placed.

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>